- added true upload function - modified train tab layout (vertical charts)
